force-app/main/default/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <label>Account(C)</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts(C)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>