force-app/main/default/objects/Account__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Accounts(C)</relationshipLabel>
    <relationshipName>Accounts_C</relationshipName>
    <type>Lookup</type>
</CustomField>