force-app/main/default/objects/Account__c/fields/Current_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Price__c</fullName>
    <label>Current Market Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>