force-app/main/default/objects/Account__c/fields/Expected_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Income__c</fullName>
    <formula>Total_Quantity__c *0.1257</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>