force-app/main/default/objects/Account__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <label>Institution Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>