force-app/main/default/objects/Account__c/fields/Net_Investments__c.field-meta.xml
<CustomField>
    <fullName>Net_Investments__c</fullName>
    <formula>Total_Investment_Amount__c  + Total_Commitions_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>