force-app/main/default/objects/Account__c/fields/Statement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_End_Date__c</fullName>
    <label>Statement End Date</label>
    <type>Date</type>
</CustomField>