force-app/main/default/objects/Account__c/fields/Statment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Statment_Start_Date__c</fullName>
    <label>Statment Start Date</label>
    <type>Date</type>
</CustomField>