force-app/main/default/objects/Account__c/fields/Stock_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Symbol__c</fullName>
    <label>Stock Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>