force-app/main/default/objects/Account__c/fields/Total_Commitions_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitions_Paid__c</fullName>
    <label>Total Commitions Paid</label>
    <summarizedField>Holding__c.Commition__c</summarizedField>
    <summaryForeignKey>Holding__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>