force-app/main/default/objects/Account__c/fields/Total_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_Amount__c</fullName>
    <label>Total Investment Amount</label>
    <summarizedField>Holding__c.Book_Value__c</summarizedField>
    <summaryForeignKey>Holding__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>