force-app/main/default/objects/Account__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>Holding__c.Quantity__c</summarizedField>
    <summaryForeignKey>Holding__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>