force-app/main/default/objects/Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Saving</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>RRSP</fullName>
            </value>
            <value>
                <fullName>TSFA</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Index Fund</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>