force-app/main/default/objects/Account__c/recordTypes/Banking.recordType-meta.xml
<RecordType>
    <fullName>Banking</fullName>
    <active>true</active>
    <description>Banking Accounts (Checking, Savings)</description>
    <label>Banking</label>
</RecordType>