force-app/main/default/objects/Account__c/recordTypes/Holding.recordType-meta.xml
<RecordType>
    <fullName>Holding</fullName>
    <active>true</active>
    <description>Holdings ( Stocks Mutual Funds, Index Funds,ETFs)</description>
    <label>Holding</label>
</RecordType>