force-app/main/default/objects/Account__c/recordTypes/Investment.recordType-meta.xml
<RecordType>
    <fullName>Investment</fullName>
    <active>true</active>
    <description>Investment Accounts (RRSP, TSFA)</description>
    <label>Investment</label>
</RecordType>