force-app/main/default/objects/Account__c/recordTypes/Line_of_Credit.recordType-meta.xml
<RecordType>
    <fullName>Line_of_Credit</fullName>
    <active>true</active>
    <description>Line Of Credit Accounts</description>
    <label>Line of Credit</label>
</RecordType>