force-app/main/default/objects/Account__c/recordTypes/Mortgage.recordType-meta.xml
<RecordType>
    <fullName>Mortgage</fullName>
    <active>true</active>
    <description>Mortgage Accounts</description>
    <label>Mortgage</label>
</RecordType>