force-app/main/default/objects/Account__c/recordTypes/Payee.recordType-meta.xml
<RecordType>
    <fullName>Payee</fullName>
    <active>true</active>
    <description>Payee Account</description>
    <label>Payee</label>
</RecordType>