force-app/main/default/objects/Account__c/recordTypes/Rental.recordType-meta.xml
<RecordType>
    <fullName>Rental</fullName>
    <active>true</active>
    <description>Rental Property Account</description>
    <label>Rental</label>
</RecordType>