force-app/main/default/objects/Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>