force-app/main/default/objects/Account__c/listViews/Credit_Cards.listView-meta.xml
<ListView>
    <fullName>Credit_Cards</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Credit Card</value>
    </filters>
    <label>Credit Cards</label>
</ListView>