force-app/main/default/objects/Account__c/listViews/Employment.listView-meta.xml
<ListView>
    <fullName>Employment</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account__c.Employment</value>
    </filters>
    <label>Employment</label>
</ListView>