force-app/main/default/objects/Account__c/listViews/Holdings.listView-meta.xml
<ListView>
    <fullName>Holdings</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Total_Investment_Amount__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Commitions_Paid__c</columns>
    <columns>Stock_Symbol__c</columns>
    <columns>Net_Investments__c</columns>
    <columns>Expected_Monthly_Income__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account__c.Holding</value>
    </filters>
    <label>Holdings</label>
</ListView>