force-app/main/default/objects/Account__c/listViews/Rental_Accounts.listView-meta.xml
<ListView>
    <fullName>Rental_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account__c.Rental</value>
    </filters>
    <label>Rental Accounts</label>
</ListView>